--- a/index.html
+++ b/index.html
@@ -185,54 +185,54 @@
   </div>
   <!-- End Masalah -->
 
-  <!-- Start Testimoni Card-->
-<section>
-  <div class="container p-5 text-center">
-    <h2 class="p-3">Review Google Map!</h2>
-    <div class="row align-items-center">
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Budi Setiawan</h5>
-            <p class="card-text"><i>"Some quick example text to build on the card title and make up the bulk of the card's content".</i></p>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
+  <!-- Google Map Testi-->
+  <section>
+    <div class="container align-self-center text-center">
+      <h2 class="p-3">Review On Google Map!</h2>
+      <div class="row align-items-center" style="padding-left: 3rem;">
+        <div class="col-md-4 align-self-center p-2">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Budi Setiawan</h5>
+              <p class="card-text"><i>"Some quick example text to build on the card title and make up the bulk of the card's content".</i></p>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Budi Setiawan</h5>
-            <p class="card-text"><i>"Some quick example text to build on the card title and make up the bulk of the card's content".</i></p>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
+        <div class="col-md-4 align-self-center p-2">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Budi Setiawan</h5>
+              <p class="card-text"><i>"Some quick example text to build on the card title and make up the bulk of the card's content".</i></p>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Budi Setiawan</h5>
-            <p class="card-text"><i>"Some quick example text to build on the card title and make up the bulk of the card's content".</i></p>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
-            <i class="bi bi-star-fill" style="color: gold;"></i>
+        <div class="col-md-4 align-self-center p-2">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Budi Setiawan</h5>
+              <p class="card-text"><i>"Some quick example text to build on the card title and make up the bulk of the card's content".</i></p>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+              <i class="bi bi-star-fill" style="color: gold;"></i>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-  <!-- End Testimoni Card -->
+  </section>
+  <!-- Google Map Testi -->
 
   <!-- Start Promotion -->
   <section>
@@ -273,10 +273,11 @@
     </div>
   </section>
   <!-- End Promotion -->
+
   <!-- Start Galery -->
   <section>
-    <div class="container p-5 text-center">
-        <h2 class="p-5">Our Galerry</h2>
+    <div class="container text-center">
+        <h2 class="p-2">Our Galerry</h2>
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -321,10 +322,10 @@
 
   <!-- Apa Kata Mereka -->
   <section>
-    <div class="container p-5 text-center">
+    <div class="container align-self-center text-center">
       <h2 class="p-3">Telah Dipakai Oleh Your Brand Ambasadors!</h2>
-      <div class="row align-items-center">
-        <div class="col-md-4">
+      <div class="row align-items-center" style="padding-left: 3rem;">
+        <div class="col-md-4 align-self-center p-2">
           <div class="card" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title">Budi Setiawan</h5>
@@ -337,7 +338,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 align-self-center p-2">
           <div class="card" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title">Budi Setiawan</h5>
@@ -350,7 +351,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 align-self-center p-2">
           <div class="card" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title">Budi Setiawan</h5>
@@ -362,12 +363,13 @@
               <i class="bi bi-star-fill" style="color: gold;"></i>
             </div>
           </div>
-        </div>
-        <div class="col-md-12 p-4 text-center">
-          <button type="button" class="btn btn-outline-primary"><b>Lihat Testimoni Pelanggan</b></button>
         </div>
       </div>
     </div>
+    <div class="col-md-12 p-2 text-center">
+      <button type="button" class="btn btn-outline-primary"><b>Lihat Testimoni Pelanggan</b></button>
+    </div>
+    <br>
   </section>
   <!-- End Kata Mereka -->
 
